<resources>
    <string name="app_name">iDrive</string>
    <string name="content_description_logo_supinfo">logo supinfo</string>
    <string name="text_login">Login</string>
    <string name="text_email">EMAIL</string>
    <string name="text_example_email">example@supinfo.com</string>
    <string name="text_password">PASSWORD</string>
    <string name="text_example_password">password</string>
    <string name="button_login">Log in</string>
    <string name="text_signup">Sign up</string>
    <string name="text_last_name">LAST NAME</string>
    <string name="text_example_last_name">last name</string>
    <string name="text_first_name">FIRST NAME</string>
    <string name="text_example_first_name">first name</string>
    <string name="text_already_registered">Already registered ? Log in here.</string>
    <string name="text_new_user">New user ? Sign up here.</string>
</resources>