<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/supinfoLogo"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:contentDescription="@string/content_description_logo_supinfo"
        android:src="@drawable/supinfo"
        app:layout_constraintBottom_toTopOf="@+id/blockSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/blockSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supinfoLogo">

        <TextView
            android:id="@+id/textFirstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:text="@string/text_first_name"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="First name"
            android:background="@drawable/custom_input_text"
            android:ems="10"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/text_example_first_name"
            android:inputType="textEmailAddress"
            android:paddingVertical="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="" />

        <TextView
            android:id="@+id/textLastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:text="@string/text_last_name"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="First name"
            android:background="@drawable/custom_input_text"
            android:ems="10"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/text_example_last_name"
            android:inputType="textEmailAddress"
            android:paddingVertical="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:text="@string/text_email"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="First name"
            android:background="@drawable/custom_input_text"
            android:ems="10"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/text_example_email"
            android:inputType="textEmailAddress"
            android:paddingVertical="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="" />

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:text="@string/text_password"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="First name"
            android:background="@drawable/custom_input_text"
            android:ems="10"
            android:fontFamily="@font/poppinsmedium"
            android:hint="@string/text_example_password"
            android:inputType="textPassword"
            android:paddingVertical="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/poppinsmedium"
        android:paddingHorizontal="50dp"
        android:text="@string/text_signup"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blockSignup" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/text_already_registered"
        android:textColor="@color/blue_supinfo"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>